; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_interface.c_Export_BotLibUpdateEntity.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_interface.c_Export_BotLibUpdateEntity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"BotUpdateEntity\00", align 1
@BLERR_LIBRARYNOTSETUP = common dso_local global i32 0, align 4
@BLERR_INVALIDENTITYNUMBER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Export_BotLibUpdateEntity(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = call i32 @BotLibSetup(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* @BLERR_LIBRARYNOTSETUP, align 4
  store i32 %9, i32* %3, align 4
  br label %20

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ValidEntityNumber(i32 %11, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %16, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* @BLERR_INVALIDENTITYNUMBER, align 4
  store i32 %15, i32* %3, align 4
  br label %20

16:                                               ; preds = %10
  %17 = load i32, i32* %4, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @AAS_UpdateEntity(i32 %17, i32* %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %16, %14, %8
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @BotLibSetup(i8*) #1

declare dso_local i32 @ValidEntityNumber(i32, i8*) #1

declare dso_local i32 @AAS_UpdateEntity(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
